--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>stock-register</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>stock-register</name>
-    <description>To work with promotions</description>
+    <description>To work with stocks</description>
 
     <properties>
         <java.version>11</java.version>
